# automatic-relations

./: Cargo.toml  README.md
examples/: false.rs  search.rs
src/: lib.rs  matching.rs  pattern.rs  pattern_eq.rs
src/convolution/: mod.rs
src/convolution/aligned/: automaton.rs  mod.rs  search.rs
src/convolution/full/: lib.rs  pattern_eq.rs
tests/: multi_search.rs  search.rs
