[package]
name = "automatic-relations"
version = "0.2.0"
authors = ["Timothée Haudebourg <timothee.haudebourg@irisa.fr>"]
edition = "2018"
categories = ["data-structures", "science"]
keywords = ["relations", "automaton", "term", "tree"]
description = "Tree automatic relations"
repository = "https://github.com/regular-pv/automatic-relations"
documentation = "https://docs.rs/automatic-relations"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
terms = "0.1.2"
tree-automata = "0.1.1"
crossbeam-channel = "0.3.9"
immutable-map = "0.1.2"
union-find = "0.3.2"
once_cell = "1.4.1"
