[package]
name = "automatic-relations"
version = "0.2.1"
authors = ["Timothée Haudebourg <timothee.haudebourg@irisa.fr>"]
edition = "2018"
categories = ["data-structures", "science"]
keywords = ["relations", "automaton", "term", "tree"]
description = "Tree automatic relations"
repository = "https://github.com/regular-pv/automatic-relations"
documentation = "https://docs.rs/automatic-relations"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
terms = "^0.1"
tree-automata = "^0.1.2"
crossbeam-channel = "^0.4"
immutable-map = "^0.1"
union-find = "^0.3"
once_cell = "^1.4"
